study border clipping fix

--- a/css/bird_identifier/assets/sass/_main.scss
+++ b/css/bird_identifier/assets/sass/_main.scss
@@ -245,6 +245,8 @@ body {
             display: block;
             margin: 15px auto;
             width: 35%;
+
+            // padding: acccounts for border overflow
             padding: 0 2px;
 
             img {
@@ -256,6 +258,7 @@ body {
 
             
             .slick-slide {
+                
                 // Add small padding between slides
                 padding: 0 2px;
             }
@@ -272,12 +275,14 @@ body {
             margin: 0;
             
             img {
+
                 width: 100%;
                 border: solid 2px black;
                 border-radius: 6px;
+                
                 // Ensure the image stays within its container
                 box-sizing: border-box;
-                display: block;
+                /* display: block; */
             }
 
             
@@ -294,8 +299,8 @@ body {
             padding: 10px;
             
             // Ensure caption stays within border
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
         }
         
         .slide-caption h3 {
